cmake_minimum_required(VERSION 3.16)

project(linked_list LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(linked_list main.cpp
    linked_list.h linked_list.cpp)

include(GNUInstallDirs)
install(TARGETS linked_list
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
